# vision

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  kxcid_rsa  kxcid_rsa.pub
bui/: CMakeCache.txt  Makefile  cmake_install.cmake
bui/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  create_db.cpp  db.cpp  demo.cpp  demo_crnn.cpp  demo_crnn_bindata.cpp  demo_insert_feature.cpp  dlib_preprocess.cpp  extract_face_feature.cpp  extract_face_feature_demo.cpp  face_dlib.cpp  face_opencv.cpp  face_recognization.cpp  insert_feature.cpp  interface_crnn.cpp  testface_thread.cpp  text_recognization.h  update_feature.cpp
src/sqlite/: Makefile  config.status  libsqlite3.la  libtool  sqlite3.pc
src/sqlite/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
src/sqlite/.libs/: libsqlite3.lai
